crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_missing_guard_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_missing_guard_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            "_",
        ),
        range: 0..28,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        "_",
                    ),
                    range: 0..27,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                "_",
                            ),
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..27,
                            node_index: NodeIndex(
                                "_",
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 18..19,
                                    node_index: NodeIndex(
                                        "_",
                                    ),
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 18..19,
                                            node_index: NodeIndex(
                                                "_",
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            "_",
                                        ),
                                        range: 24..27,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    "_",
                                                ),
                                                range: 24..27,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match x:
2 |     case y if: ...
  |              ^ Syntax Error: Expected an expression
  |
